--- a/design/login.html
+++ b/design/login.html
@@ -34,7 +34,7 @@
                     <code>client_id</code>: <input id="login-client-id" data-sync="client_id" value="bca2a89f33694250b5b79633e3435a39" placeholder="Client ID">
                 </li>
                 <li>
-                    <code>redirect_uri</code>: <input id="login-redirect-uri" data-sync="redirect_uri" type="text" size="40" placeholder="Redirect URI"> <span class="note">(This should be a page that is prepared to handle the returned auth code)</span>
+                    <code>redirect_uri</code>: <input id="login-redirect-uri" data-sync="redirect_uri" value="https://mart32jm.github.io/design/login.html" placeholder="Redirect URI"> <span class="note">(This should be a page that is prepared to handle the returned auth code)</span>
                 </li>
             </ul>
 
@@ -54,29 +54,6 @@
 
             <p>Here is an example of making the authorization request via JavaScript (updated with your request values):</p>
 
-            <!-- HTML generated using hilite.me -->
-            <div class="code-display">
-                <pre style="margin: 0; line-height: 125%"><span style="color: #008000">window</span>.localStorage.setItem(<span style="color: #BA2121">&#39;code_verifier&#39;</span>, codeVerifier); <span style="color: #408080; font-style: italic">// Save the code verifier for later</span>
-
-<span style="color: #008000; font-weight: bold">const</span> clientId <span style="color: #666666">=</span> <span style="color: #BA2121">&#39;<span data-sync="client_id"></span>&#39;</span>;
-<span style="color: #008000; font-weight: bold">const</span> redirectUri <span style="color: #666666">=</span> <span style="color: #BA2121">&#39;<span data-sync="redirect_uri"></span>&#39;</span>;
-
-<span style="color: #008000; font-weight: bold">const</span> scope <span style="color: #666666">=</span> <span style="color: #BA2121">&#39;user-read-private user-read-email&#39;</span>; <span style="color: #408080; font-style: italic">// Specifies what user data your app can access!</span>
-<span style="color: #008000; font-weight: bold">const</span> authUrl <span style="color: #666666">=</span> <span style="color: #008000; font-weight: bold">new</span> URL(<span style="color: #BA2121">&quot;https://accounts.spotify.com/authorize&quot;</span>)
-
-<span style="color: #008000; font-weight: bold">const</span> params <span style="color: #666666">=</span>  {
-    response_type<span style="color: #666666">:</span> <span style="color: #BA2121">&#39;code&#39;</span>,
-    client_id<span style="color: #666666">:</span> clientId,
-    scope<span style="color: #666666">:</span> scope,
-    code_challenge_method<span style="color: #666666">:</span> <span style="color: #BA2121">&#39;S256&#39;</span>,
-    code_challenge<span style="color: #666666">:</span> codeChallenge, <span style="color: #408080; font-style: italic">// The hashed code verifier</span>
-    redirect_uri<span style="color: #666666">:</span> redirectUri,
-}
-
-authUrl.search <span style="color: #666666">=</span> <span style="color: #008000; font-weight: bold">new</span> URLSearchParams(params).toString();
-<span style="color: #008000">window</span>.location.href <span style="color: #666666">=</span> authUrl.toString(); <span style="color: #408080; font-style: italic">// Redirect the user</span>
-</pre>
-            </div>
 
             <aside>
                 <h4 id="code-verifier-and-code-challenge">Learn More: Code Verifier and Code Challenge</h4>
@@ -118,30 +95,7 @@ authUrl.search <span style="color: #666666">=</span> <span style="color: #008000
             <p>Here is an example of a request that exchanges the auth code for an access token:</p>
 
             <!-- HTML generated using hilite.me -->
-            <div class="code-display">
-                <pre style="margin: 0; line-height: 125%"><span style="color: #408080; font-style: italic">// codeVerifier MUST be the same as the one used to make the code challenge for the auth request</span>
-<span style="color: #008000; font-weight: bold">const</span> codeVerifier <span style="color: #666666">=</span> localStorage.getItem(<span style="color: #BA2121">&#39;code_verifier&#39;</span>);
 
-<span style="color: #008000; font-weight: bold">const</span> payload <span style="color: #666666">=</span> {
-    method<span style="color: #666666">:</span> <span style="color: #BA2121">&#39;POST&#39;</span>,
-    headers<span style="color: #666666">:</span> {
-        <span style="color: #BA2121">&#39;Content-Type&#39;</span><span style="color: #666666">:</span> <span style="color: #BA2121">&#39;application/x-www-form-urlencoded&#39;</span>,
-    },
-    body<span style="color: #666666">:</span> <span style="color: #008000; font-weight: bold">new</span> URLSearchParams({
-        grant_type<span style="color: #666666">:</span> <span style="color: #BA2121">&#39;authorization_code&#39;</span>,
-        client_id<span style="color: #666666">:</span> <span style="color: #BA2121">&#39;<span data-sync="client_id"></span>&#39;</span>,
-        redirect_uri<span style="color: #666666">:</span> <span style="color: #BA2121">&#39;<span data-sync="redirect_uri"></span>&#39;</span>,
-        code_verifier<span style="color: #666666">:</span> codeVerifier,
-        code<span style="color: #666666">:</span> authCode, <span style="color: #408080; font-style: italic">// From the URL</span>
-    }),
-}
-
-<span style="color: #008000; font-weight: bold">const</span> response <span style="color: #666666">=</span> await fetch(<span style="color: #BA2121">&#39;https://accounts.spotify.com/api/token&#39;</span>, payload);
-<span style="color: #008000; font-weight: bold">const</span> data <span style="color: #666666">=</span> await response.json();
-
-<span style="color: #008000; font-weight: bold">const</span> accessToken <span style="color: #666666">=</span> data.access_token;
-</pre>
-            </div>
 
             <h3 id="try-token">Try It Yourself!</h3>
             <p>If you've successfully obtained an auth code, you can click this button to exchange it for an access token:</p>
@@ -166,16 +120,6 @@ authUrl.search <span style="color: #666666">=</span> <span style="color: #008000
             <p>Here is an example of how you can get the current user's profile:</p>
 
             <!-- HTML generated using hilite.me -->
-            <div class="code-display">
-                <pre style="margin: 0; line-height: 125%"><span style="color: #008000; font-weight: bold">const</span> response <span style="color: #666666">=</span> await fetch(<span style="color: #BA2121">&quot;https://api.spotify.com/v1/me&quot;</span>, {
-    headers<span style="color: #666666">:</span> {
-        <span style="color: #BA2121">&#39;Authorization&#39;</span><span style="color: #666666">:</span> <span style="color: #BA2121">&#39;Bearer &#39;</span> <span style="color: #666666">+</span> accessToken,
-    },
-});
-
-<span style="color: #008000; font-weight: bold">const</span> data <span style="color: #666666">=</span> await response.json();
-</pre>
-            </div>
 
             <h3 id="try-api">Try It Yourself!</h3>
             <p>If you've successfully obtained an access token, you can click this button to get the current user's profile:</p>
